create ProjectInput class and render it to the DOM

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
-    <template id="form-control">
+    <template id="project-input">
       <form action="">
         <div class="form-control">
           <label for="title">Title</label>
