--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       </section>
     </template>
     <div id="app"></div>
-    <script src="/dist/app.js" defer></script>
+    <script type="module" src="/dist/app.js" defer></script>
   </body>
 </html>
