--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
       </section>
     </template>
     <div id="app"></div>
-    <script type="module" src="/dist/app.js" defer></script>
+    <script src="/dist/bundle.js" defer></script>
   </body>
 </html>
